--- a/actions/list_metrics.yaml
+++ b/actions/list_metrics.yaml
@@ -1,6 +1,6 @@
 ---
 name: list_metrics
-runner_type: run-python
+runner_type: python-script
 description: List all metrics setup on Librato
 enabled: true
 entry_point: list_metrics.py
