--- a/pack.yaml
+++ b/pack.yaml
@@ -3,5 +3,8 @@ ref: librato
 name: librato
 description: Send and manage metrics with Librato
 version: 0.3.1
+python_versions:
+  - "2"
+  - "3"
 author: James Fryman
 email: james@fryman.io
